tests/Core/positive/test006.jvc
-- if then else

def loop := loop;

(if 3 > 0 then 1 else loop) + (if 2 < 1 then loop else if 7 >= 8 then loop else 1)
