tests/Core/negative/test006.jvc
-- invalid application

(if true then 1 else 2) 3
